fixed the results box spacing for responses on desktop

--- a/ipreact/src/index.css
+++ b/ipreact/src/index.css
@@ -113,7 +113,7 @@ button:focus-visible {
 }
 .resultsDiv{
   display: grid;
-  grid-template-columns: repeat(3,1fr);
+  grid-template-columns: repeat(4,1fr);
   gap: 14px;
   text-align: left;
 
